tests/interface_merging_libdefs_errors/interface_merging_libdefs_errors.exp
Error ------------------------------------------------------------------------------------- flow-typed/declares.js:10:11

Cannot merge interface `TparamMismatch` [1] because type parameter lists differ. [libdef-override]

   flow-typed/declares.js:10:11
   10| interface TparamMismatch<T> {
                 ^^^^^^^^^^^^^^

References:
   flow-typed/declares.js:13:11
   13| interface TparamMismatch<T, U> {
                 ^^^^^^^^^^^^^^ [1]



Found 1 error
